updated dockerfile and workdir